--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,9 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "Rgbp"]
+	path = Rgbp
+	url = https://github.com/jyklly/rgbp
+	shallow = true
+	subdir = Rgbp
+	registered = true
